# Connect-Four-AI

./: .gitattributes  .gitignore  CLAUDE.md  MODEL_CLEANUP_REPORT.md  MODEL_HEALTH_REPORT.md  README.md  deployment-guide.md  enhanced-pipeline.sh  kill-port.sh  package-lock.json  package.json  port-manager.sh  render.yaml  restart-all.sh  setup-production.sh  smart-ml-pipeline.sh  smart-start-parallel.sh  smart-start.sh  start-all.sh  stop-all.sh
.github/workflows/: ci.yml  deployment.yml  health-monitoring.yml  ml_training.yml  performance.yml  security.yml
backend/: .env.production  Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  webpack-hmr.config.js
backend/src/: app.module.ts  health.controller.ts  main.ts
backend/test/: game.gateway.spec.js  game.gateway.spec.ts  game.service.spec.js  game.service.spec.ts
c_cpp/: CMakeLists.txt  Makefile
c_cpp/src/c/: board.c  board.h
c_cpp/src/cpp/: Game.cpp  Game.hpp  main.cpp
c_cpp/src/cpp/core/: Board.cpp  Board.hpp
c_cpp/src/cpp/players/: HumanPlayer.cpp  HumanPlayer.hpp  Player.hpp
docs/: README.md
frontend/: .env.local  env.production  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/public/: error-suppressor.js  index.html
frontend/src/: App.test.tsx  (+4 more)
ml_service/: ai_coordination_hub.py  continuous_learning.py  coordination_learning_bridge.py  difficulty_aware_learning.py  enhanced_inference.py  initialize_models.py  integrate_difficulty_learning.py  integration_client.py  learning_monitor.py  metal_inference_service.py  ml_service.py  model_sync_endpoint.py  requirements.production.txt  requirements.txt  run_ml_service_pipeline.sh  self_play_train.py  simple_client_test.py  start_quick.py  start_service.py  start_with_continuous_learning.py  test_integrated_learning.py  test_service.py
models/: .gitignore  best_policy_net.pt  current_policy_net.pt  fine_tuned_20250711T222950Z.pt
models_backup/: backup_manifest.json
scripts/: enhanced-restart.sh  enterprise-parallel-launcher.js  health-check.sh  parallel-launcher.js  run_ml_pipeline.sh  run_ml_service_pipeline.sh  run_pipeline.sh  unified-enterprise-launcher.js
(+182 files in other folders)
